# speaker-verification

./: .gitignore  LICENSE  MANIFEST.in  README.md  denoise.py  environment.yml  fastai_installation.md  nextpow2.py  requirements.txt  setup.cfg  setup.py  test.rb
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yml  python-ci.yml
snippets/: ruby_comms_sample.rb
speaker_verification/: __init__.py  __main__.py  api.py  audio.py  denoise.py  model_evaluation.py  model_evaluation_runner.py  rescnn_model.py  sql_utils.py
speaker_verification/audio/: audio.py  demo.py  voice_encoder.py
speaker_verification/deep_speaker/: audio.py  rescnn_model.py
speaker_verification/tests/: test_audio_function.py  test_evaluation.py  test_init_workflows.py  test_sql_utils.py  test_sqlmethods.py
speaker_verification/tests/input/: enrollment.flac  validation.flac
speaker_verification/utils/: logger.py
src/: api.py  audio.py  cli.py  denoise.py  model_evaluation_runner.py  rescnn_model.py  sql_utils.py
