[metadata]
name = speaker-verification
version = 0.1.0
author = OnTrack UG Squad
author_email = ajgriffi@deakin.edu.au
description = The machine learning package evaluate audio files submitted from a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OnTrack-UG-Squad/speaker-verification
license = MIT
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/OnTrack-UG-Squad/speaker-verification/issues
    Pull Requests = https://github.com/OnTrack-UG-Squad/speaker-verification/pulls
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Topic :: Machine Learning

[options]
package_dir =
    = speaker_verification
packages = find:
python_requires = >=3.8, <3.9

[options.packages.find]
where = speaker_verification
