[metadata]
name = speaker-verification
version = 0.1.2
3uthor = OnTrack UG Squad
author_email = ajgriffi@deakin.edu.au
description = The machine learning package examines audio files submitted from a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OnTrack-UG-Squad/speaker-verification
license = MIT
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/OnTrack-UG-Squad/speaker-verification/issues
    Pull Requests = https://github.com/OnTrack-UG-Squad/speaker-verification/pulls
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8, <3.9
zip_safe = True
include_package_data = True
install_requires =
    audioread ==2.1.9
    Keras ==2.3.1
    librosa ==0.7.2
    numba ==0.48.0
    numpy ==1.18.5
    python-speech-features ==0.6
    tensorflow >=2.1.0
    pytest

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
  speaker_verification = speaker_verification:main
